# brian

./: .gitignore  README.md
CPP/picow/blink/: CMakeLists.txt
CPP/picow/docs/: README.md
CPP/picow/timers/: brian.c
Lora Library Links/: Links.txt
Lora Modules/: Links.txt
Protocol/: packet.txt  proposal.txt
Specifications/: OutlineDiagram.odg
links/BME280/: https thepihut com products.txt
links/Lora Library Links/: Links.txt
picow/blink/: CMakeLists.txt  picow_blink.c
picow/docs/: README.md
picow/timers/: CMakeLists.txt
uPython/examples/: dht22.py
uPython/examples/flashy/: flashy.py
uPython/examples/ping/: main.py
uPython/examples/pong/: main.py
uPython/ping/: main.py  ping.py
uPython/polytunnel/: EnvSensorCapability.py  MockedEnvSensor.py  MockedTempSensor.py  Pico_Temp_Sensor.py  dht22sensor.py  main.py  sensors42.py
uPython/pong/: main.py  pong.py
uPython/shed42/: main.py
zephyr/: hello_world.sh  install_zephyr_sdk.sh  kitware-archive.sh  setup_zephyr.sh
zephyr/dot_vscode/: README.txt  launch.json  settings.json  tasks.json
